Added intro text
Added intro text for guidance.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 				<input id="colorInput" type="text" name="player_color" placeholder="Deck Color">
 				<button id="addPlayerButton">Add</button>
 		  </div>
-		  <div id="container"></div>
+		  <div id="container">
+			  <h1 id="intro">Type Name, Taunt, Deck Color then click Add</h1>
+		  </div>
 	</div>
 </body>
